[package]
name = "rserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
hyper-staticfile = "0.9.5"
tokio = { version = "1.29.1", features = ["full"] }
pretty_env_logger = "0.5.0"
